--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "css-loader": "^5.1.3",
     "csv-loader": "^3.0.3",
+    "html-webpack-plugin": "^5.3.1",
     "json5": "^2.2.0",
     "style-loader": "^2.0.0",
     "toml": "^3.0.0",
